tests/snapshots/examples_fixtures/errors__expected_token_error.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/errors/expected_token_error.flx
== compile ==
failed (parse)
== diagnostics ==
--> compiler error[E076]: UNCLOSED DELIMITER

Expected a closing `)` to match this opening `(`.

  --> examples/errors/expected_token_error.flx:2:10
  |
2 |     print((1 + 2);
  |          ^

note: Expected `)` before this token.
  --> examples/errors/expected_token_error.flx:2:18
  |
2 |     print((1 + 2);
  |                  ^
== stdout ==
<not executed>
